--- a/assets/styles/layout/_headerProfil.scss
+++ b/assets/styles/layout/_headerProfil.scss
@@ -1,72 +1,72 @@
-.headerProfil {
-  background-color: var(--primary-color);
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+// .headerProfil {
+//   background-color: var(--primary-color);
+//   height: 300px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   text-align: center;
 
-  &_logo > a > img {
-    height: 58px;
-    width: 228px;
-    top: 40px;
-    align-items: center;
-  }
+//   &_logo > a > img {
+//     height: 58px;
+//     width: 228px;
+//     top: 40px;
+//     align-items: center;
+//   }
 
-  &_img {
-    position: absolute;
-    top: 210px; //Je dois modifer pour le placer corretements
-    left: 50%;
-    transform: translateX(-50%);
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 5px solid #efdcab;
-    background-color: #efdcab;
-    z-index: 10;
-  }
-  &_img > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+//   &_img {
+//     position: absolute;
+//     top: 210px; //Je dois modifer pour le placer corretements
+//     left: 50%;
+//     transform: translateX(-50%);
+//     width: 150px;
+//     height: 150px;
+//     border-radius: 50%;
+//     overflow: hidden;
+//     border: 5px solid #efdcab;
+//     background-color: #efdcab;
+//     z-index: 10;
+//   }
+//   &_img > img {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//   }
 
-  // A partir de la tu as les liens et les btn de la page profils non connecter ?
-  &_nameUser {
-    color: var(--primary-color);
-    font-weight: 600;
-    font-size: 24px;
-    padding-bottom: 15px;
-  }
+//   // A partir de la tu as les liens et les btn de la page profils non connecter ?
+//   &_nameUser {
+//     color: var(--primary-color);
+//     font-weight: 600;
+//     font-size: 24px;
+//     padding-bottom: 15px;
+//   }
 
-  &_contenair {
-    display: flex;
-    flex-direction: column;
-    padding-top: 4rem;
-    justify-items: center;
-    height: 100vh;
-  }
+//   &_contenair {
+//     display: flex;
+//     flex-direction: column;
+//     padding-top: 4rem;
+//     justify-items: center;
+//     height: 100vh;
+//   }
 
-  &_liens > div > a {
-    color: var(--third-color);
-    border-bottom: 3px solid var(--primary-color);
-    text-align: center;
-    text-decoration: none;
-  }
-  &_liens > div {
-    padding: 15px;
-  }
-  &_liens {
-    text-align: center;
-    padding-top: var(--padding-lg);
-    font-size: 16px;
-  }
-  &_btns {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    padding-top: var(--padding-lg);
-    font-size: 16px;
-  }
-}
+//   &_liens > div > a {
+//     color: var(--third-color);
+//     border-bottom: 3px solid var(--primary-color);
+//     text-align: center;
+//     text-decoration: none;
+//   }
+//   &_liens > div {
+//     padding: 15px;
+//   }
+//   &_liens {
+//     text-align: center;
+//     padding-top: var(--padding-lg);
+//     font-size: 16px;
+//   }
+//   &_btns {
+//     display: flex;
+//     justify-content: center;
+//     gap: 1rem;
+//     padding-top: var(--padding-lg);
+//     font-size: 16px;
+//   }
+// }
