--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -17,13 +17,13 @@
 /* Layout */
 @import "layout/header";
 @import "layout/filtre";
-@import "layout/headerProfil";
 @import "layout/formContact";
 @import "layout/popup";
 @import "layout/footer";
 @import "layout/secLocation";
 @import "layout/category";
 @import "layout/carMett";
+@import "layout/connexion";
 
 /* Components */
 @import "components/card";
