--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -1,87 +1,59 @@
-.btn {
-  background: #fff;
-  border: 1px solid var(--primary-color);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-  padding: 5px;
-  font-size: 16px;
-  border-radius: 999px;
-  width: 100%;
-  &_filter {
-    border-radius: 15px;
-    background: #fff;
-    border: 1px solid var(--primary-color);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    font-size: 16px;
-    padding: 5px;
-    width: 100%;
-  }
-  &_hidden {
-    display: none;
-    border: none;
-  }
-  &_valide {
-    width: fit-content;
-    height: fit-content;
-    border-radius: 20px;
-  }
-  &_connexion {
-    border-radius: 999px;
-    border: var(--border-orange);
-    background-color: var(--primary-color);
-    font-size: 16px;
-    padding: 10px 15px;
-    font-family: var(--font-body);
+// ******* BTN DE FOOTER **************************
+.footer_buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+  margin: auto;
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
   }
 
-  &_form {
-    align-items: center;
-    border: none;
-    border-radius: 10px;
-    padding: 5px;
-    box-shadow: var(--box-shadow);
-    background-color: var(--primary-color);
-    color: var(--third-color);
-    width: 70%;
-    margin: auto;
-  }
-  &_addDate {
-    border: 1px solid var(--primary-color);
-    background-color: var(--secondary-color);
-    box-shadow: var(--box-shadow);
-    border-radius: 15px;
+  // Bouton "Créer un compte"
+  button:first-child {
+    background-color: #4c5563;
+    color: #ffffff;
+    padding: 0.75rem 1.5rem;
+    border-radius: 8px;
+    font-weight: 600;
     font-size: 1rem;
-  }
-}
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
 
-.formSubmit {
-  border: 1px solid var(--third-color);
-  opacity: 0.5;
-}
+    &:hover {
+      background-color: #2e3339;
+    }
+  }
 
-.box {
-  // Taille du container photo
-  // ! Je ne sais pas comment faire pour que mon border fit le contenu et no le conenant
-  label {
-    border-bottom: 1px solid var(--third-color);
-    font-family: 600;
-    font-size: 1.1rem;
-    margin: 5px;
-  }
-  .filewrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 300px;
-    width: 300px;
-    gap: 10px;
-    margin: auto;
-    border-radius: 10px;
-    background-color: #f0f0f0;
-    border: 1px dashed var(--primary-color);
-  }
-  .filewrapper input[type="file"] {
-    opacity: 0;
-    position: absolute;
-    width: 50%;
+  // Bouton "Organiser un événement" désactivé
+  button:last-child {
+    background-color: #ffffff;
+    color: #aaa;
+    border: 1px solid #ddd;
+    padding: 0.75rem 1.5rem;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1rem;
+    opacity: 0.7;
+    cursor: not-allowed;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #ffffff;
+    }
+
+    // Quand activé
+    &.active {
+      cursor: pointer;
+      opacity: 1;
+      color: #4c5563;
+
+      &:hover {
+        background-color: #f2f2f2;
+      }
+    }
   }
 }
+// 
