--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -6,7 +6,6 @@
   padding-bottom: 0;
   margin-bottom: 0;
 
-
   &_top {
     display: flex;
     justify-content: space-between;
@@ -22,7 +21,7 @@
     font-size: var(--font-size-lg);
     color: black;
   }
-  &_logo >p {
+  &_logo > p {
     color: #3d3d3d;
   }
   &_nav {
@@ -36,16 +35,16 @@
     text-decoration: none;
   }
   &_liens a {
-  text-decoration: none;
-  color: black; 
-// Se rappeler que il y auras le monde sombre ici
-  font-family: "Corben", serif;
-  font-weight: 700;
-  font-size: var(--font-size-lg);
-}
+    text-decoration: none;
+    color: black;
+    // Se rappeler que il y auras le monde sombre ici
+    font-family: "Corben", serif;
+    font-weight: 700;
+    font-size: var(--font-size-lg);
+  }
   &_liens a:hover {
-  color:#dc2626; 
-}
+    color: #dc2626;
+  }
   // &_searchbar {
   //   margin-top: var(--padding-md);
   //   display: flex;
@@ -92,11 +91,10 @@
     // backgroud blanc faire attention pour le logo
   }
 
-.btn_co {
-  display: flex;
-  justify-content: center;
-}
-
+  .btn_co {
+    display: flex;
+    justify-content: center;
+  }
 
   .connexion_btn {
     margin: auto;
@@ -113,6 +111,10 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+
+    :hover {
+      background: #dc2626;
+    }
   }
 
   &_bottom {
