--- a/assets/styles/layout/_secLocation.scss
+++ b/assets/styles/layout/_secLocation.scss
@@ -1,5 +1,5 @@
 .location {
-  background: linear-gradient(135deg, #0a0a0a 0%, #374151 100%);
+  background: url("../../../images/user/bannier.png") center center / cover no-repeat;
   color: #f8f9fa;
   font-family: "Poppins", sans-serif;
   display: flex;
