--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -39,3 +39,4 @@
 @import "mediaQuery/headerMedia";
 @import "mediaQuery/indexQuery.scss";
 @import "mediaQuery/aproposMedia";
+@import "mediaQuery/config.container"
