--- a/assets/styles/settings/_config.spacings.scss
+++ b/assets/styles/settings/_config.spacings.scss
@@ -9,6 +9,10 @@
   --padding-xxl: 60px;
   --padding-wide: 100px;
 }
+// padding btn
+:root {
+  --padding-btn-acceuil: 0.85rem 1.5rem;
+}
 
 :root {
   --gap-xs: 10px;
