--- a/assets/styles/forms/_input.scss
+++ b/assets/styles/forms/_input.scss
@@ -59,3 +59,14 @@ input[type="checkbox"] {
   border-radius: 10px;
   padding: 5px;
 }
+
+
+ .inputRed_ville input {
+      padding: 0.75rem;
+      border: 1px solid #e5e7eb;
+      border-radius: 0.375rem;
+      font-size: 1rem;
+      width: 100%;
+      min-width: 250px;
+    }
+  
