--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -63,7 +63,7 @@
   font-family: var(--font-sous-titre);
   color: var(--color-titre-blanc);
   border: var(--border-none);
-  padding: var(--padding-btn-acceuil);
+  padding: 0.5rem 1rem;
   font-weight: var(--font-waight-medium);
   font-size: var(--font-size-g);
   border-radius: var(--border-radius-md);
