--- a/assets/styles/settings/_config.colors.scss
+++ b/assets/styles/settings/_config.colors.scss
@@ -6,6 +6,8 @@
   --backround-card: #ffffff;
   --third-color: #000;
   --dark-card: #111111;
+  --text-titre-dark: #222222;
+  --text-sous-titre-gis: #4f4f4f;
 }
 
 :root {
