--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -33,6 +33,21 @@
 
     margin: auto;
   }
+  &_category{
+    margin: 1rem auto;
+  padding: 0 10rem;
+  text-align: center;
+  @media (max-width: 1020px) {
+    padding: 0 10rem ;
+    margin: 0;
+  }
+
+  @media (max-width: 800px) {
+    padding: 0;
+    margin: 0;
+  }
+
+  }
   &_box {
     display: flex;
     flex-direction: column;
@@ -100,16 +115,21 @@
   }
 
   // container_category
-  &_category {
-    margin: auto;
-    padding: 0 10rem;
-    text-align: center;
-    margin: 1rem;
+ .container_card {
+  margin: 1rem auto;
+  padding: 0 10rem;
+  text-align: center;
 
-    @media (max-width: 768px) {
-      padding: 0 2rem; // ou 1rem si t’es plus tight
-    }
+  @media (max-width: 1020px) {
+    padding: 0;
+    margin: 0;
   }
+
+  @media (max-width: 800px) {
+    padding: 0;
+    margin: 0;
+  }
+}
 
   &_filter {
     margin: 5rem 10rem;
