--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -3,14 +3,12 @@
   color: var(--third-color);
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   list-style: none;
-  height: 60px;
-  padding-bottom: 0;
-  margin-bottom: 0;
+  height: 50px;
 
   &_top {
     display: flex;
     justify-content: space-between;
-    padding-top: 10px;
+
   }
 
   &_logo > a {
@@ -19,14 +17,23 @@
     font-family: "Corben", serif;
     font-weight: 700;
     font-style: normal;
-    font-size: var(--font-size-lg);
+    font-size: var(--font-size-2xl);
     color: black;
   }
   &_logo > p {
     color: #3d3d3d;
+    font-family: "give you glory", ui-rounded;
+    font-size: var(--font-size-g);
+    padding-left: 10px;
   }
   &_nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
     padding: 10px;
+    
   }
 
   &_liens {
@@ -34,17 +41,17 @@
     flex-direction: row;
     gap: 20px;
     text-decoration: none;
+    color: var(--text-titre-dark);
   }
   &_liens a {
     text-decoration: none;
-    color: black;
+    color: var(--text-titre-dark);
     // Se rappeler que il y auras le monde sombre ici
-    font-family: "Corben", serif;
-    font-weight: 700;
-    font-size: var(--font-size-lg);
+   font-family: "inter", serif;
+    font-size: var(--font-size-g);
   }
   &_liens a:hover {
-    color: #dc2626;
+    color: #1f1e1e;
   }
 
   &_img {
@@ -52,7 +59,7 @@
     flex-direction: row;
     border: 1px black solid;
     padding-right: 5px;
-    border-radius: 10px;
+    border-radius: 15px;
     // backgroud blanc faire attention pour le logo
   }
 
@@ -68,18 +75,13 @@
     align-items: center;
     padding: 6px 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
-    border-radius: 6px;
+    border-radius: 15px;
     color: #3d3d3d;
     background: #fff;
-    border: none;
+    border: 1px solid #e0d8d8;
     box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
     user-select: none;
-    -webkit-user-select: none;
     touch-action: manipulation;
-
-    :hover {
-      background: #dc2626;
-    }
   }
 
   &_bottom {
